# hackbrain

./: .env.example  .gitignore  .pre-commit-config.yaml  0001-remove-stale-test-industrial.patch  APPLY_FIXES.md  APPLY_README.md  DELETED_FILES.txt  DELETE_FILES.txt  DIRECTORY_STRUCTURE.md  Dockerfile  FILE_MATRIX.txt  INSTALL.md  INTEGRATION.md  INTEGRATION_SUMMARY.md  Makefile  PHASE1_INTEGRATION_GUIDE.md  PHASE2_CHANGE_MANIFEST.md  PHASE2_EXECUTION_REPORT.md  PHASE3_IMPLEMENTATION.md  PHASE4_CLOSURE_CHANGES.md  PHASE4_FIXES_MANIFEST.txt  PHASE4_INTEGRATION_CHANGES.md  PHASE5_IMPLEMENTATION_NOTES.md  README.md  README_FIXES.txt  STAGE0_README.md  STAGE5_VERIFICATION.md  TRACK_A_STAGE1_NOTES.md  TRACK_A_STAGE2_NOTES.md  TRACK_B_STAGE2_COMPLETION_NOTES.md  VERIFICATION_CERTIFICATE.md  __init__.py  config.py  constants.py  dispatcher.py  docker-compose-logging-patch.md  docker-compose.yml  duplicate_detector.py  final_stage4_acceptance.md  hackbrain_cleanup.patch  (+17 more)
Phase2_Backend_Contracts/: README.md
app/: __init__.py  config.py  database.py  deps.py  main.py  mqtt_bridge.py
app/api/: __init__.py  ai_proxy.py  auth.py  dashboard.py  industrial.py  users.py  ws.py
app/core/: __init__.py  config.py  dependencies.py  errors.py  exceptions.py  health.py  logging_config.py  middleware.py  payload_guard.py  security.py  tenant_isolation.py  timeutils.py
app/models/: __init__.py  alarm.py  asset.py  schemas.py  user.py
app/repositories/: __init__.py  adapters.py  interfaces.py  production.py  stubs.py
app/schemas/: __init__.py  auth.py  dashboard.py  industrial.py  user.py  users.py
app/services/: __init__.py  ai_client.py  auth_service.py  dashboard_service.py  industrial_service.py  (+2 more)
architecture/: architecture_review.md  audit_report.md  telemetry_architecture.md
audit/: module_audit.md
collaboration/: adr_repository.md  cross_team_support_charter.md
config/: mosquitto.conf  mqtt_broker.conf  simulator_config.yaml  topics.yaml  validation_rules.yaml
database/: README.md  __init__.py  config.py  connection.py  crud.py  database.yaml  exceptions.py  interfaces.py  iob_core_schema.sql  logger.py  models.py  repository.py  schema.sql  seed.sql  seed_users.sql
datasets/: README.md  __init__.py  aggregator.py  cleaner.py  config.py  exporter.py  extractor.py  feature_dictionary.md  label_generator.py  logger.py  pipeline.py  statistics.py  transformer.py  validator.py
deliverable/: docker-compose.yml  pyproject.toml  requirements.txt
diagrams/: database_architecture.mmd  industrial_data_flow.mmd  system_architecture.mmd
docs/: API_CONTRACT_V1.md  IOB_Phase1_Architecture_Blueprint.md  README.md  alarm_api.md  api_reference.md  api_validation.md  architecture.md  authentication.md  backend_dataflow.md  backend_integration.md  dashboard_api.md  factory_design.md  historical_api.md  integration.md  machine_api.md  machine_inventory.md  metadata_api.md  performance.md  phase2_backend_contracts_index.md  phase3_smoke_testing.md  redis_event_bus.md  repository_usage.md  security.md  sensor_architecture.md  service_layer.md  testing.md
documentation/: dataset_guide.md
governance/: architecture_governance_charter.md  change_management_registry.md  iob_governance_portfolio.md  release_management_governance.md  security_compliance_framework.md
handover/: README.md  __init__.py  docker-compose.yaml
infrastructure/: docker-compose.yml
ingestion/: __init__.py  exceptions.py  interfaces.py  logger.py  metadata_enricher.py  models.py  quality_checker.py  timestamp_validator.py  utils.py
integration/: README.md  __init__.py  ai_readiness.md  asset_service.py  backend_contracts.py  backend_readiness.md  config.py  contracts.py  exceptions.py  frontend_readiness.md  history_service.py  interfaces.py  logger.py  mappers.py  metadata_service.py  mqtt_service.py  query_service.py  registry.py  sensor_service.py  services.py  telemetry_service.py
logs/: .gitkeep
metadata/: dataset_blueprint.md  machine_metadata.json  sensor_metadata.json  version.json
operations/: disaster_recovery.md  incident_management_framework.md  maintenance_manual.md  operational_excellence.md  operations_manual.md  production_support_runbook.md
planning/: operational_scenarios.md
quality/: quality_assurance_report.md  risk_register.md
reports/: performance_review.md  phase3_smoke_testing_report.md  phase4_quality_report.md  phase4_review.md  phase5_acceptance.md  phase5_project_review.md  quality_assurance.md  stage3b_review.md  validation_report.md
reviews/: database_review.md  documentation_review.md  emerging_technologies_watch.md  mqtt_validation.md  performance_capacity_blueprint.md  performance_review.md  quarterly_technology_review.md
roadmaps/: multi_year_platform_vision.md  version_2_0_strategic_plan.md  version_3_0_strategic_plan.md
sample_data/: generate_sample.py  sample.jsonl
schemas/: iob_telemetry_contract_v2.json
scripts/: database_seed.py  export_openapi.py  generate_ts_models.py
shared/: event_bus.py
simulator/: __init__.py  config.py  constants.py  factory.py  generator.py  machine.py  publisher.py  sensor.py  telemetry.py  utils.py
src/: __init__.py  config_loader.py  integration_bridge.py
tests/: __init__.py  conftest.py  live_pipeline_demo.py  smoke_tests.py  test_ai_proxy.py  test_assets.py  test_auth.py  test_config_loader.py  test_contracts.py  test_core.py  test_database.py  test_deps_stage0.py  test_dispatcher.py  test_e2e_pipeline.py  test_governance_portfolio.py  test_industrial.py  test_ingestion.py  test_integration.py  test_operational_scenarios.py  test_phase1_exception_hardening.py  test_phase2_backend_contracts.py  test_phase3_core.py  test_phase4_frontend_integration.py  test_pipeline.py  test_retry_manager.py  test_section3_compliance.py  test_section4_implementation.py  test_simulator.py  test_stage2_auth.py  test_stage2_realtime.py  test_stage5_migration.py  test_timestamp_validator.py  test_users.py  test_validator.py
validation/: README.md  __init__.py  dataset_validation_report.md  validation_plan.md  validation_rules.json
(+153 files in other folders)
